--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -11,6 +13,8 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+      --background: #ffffff;
+  --foreground: #171717;
   }
 }
 
@@ -26,14 +30,23 @@ body {
   }
 }
 
+.leaflet-popup {
+  bottom: 5px !important;
+}
 
 .detail {
 
 }
 
+h3 {
+   font-family: "Bebas Neue", sans-serif !important;
+   
+}
+
 .custom-marker {
   border-radius: 50%;
   border: 2px solid #fff;
+   background-color: #3c9be7; 
 }
 
 .custom-marker.future {
@@ -53,5 +66,5 @@ body {
 }
 
 .custom-marker.active {
-  background-color: #FFFF00; /* yellow */
+  background-color: #3c9be7; 
 }
